--- a/oscam/Makefile
+++ b/oscam/Makefile
@@ -1,81 +1,25 @@
 #
-# Copyright (C) 2016 OpenWrt.org
+# Copyright (C) 2016-2017 Tomasz Maciej Nowak <tomek_n@o2.pl>
 #
 # This is free software, licensed under the GNU General Public License v2.
 # See /LICENSE for more information.
 #
-# $Id$
-
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=oscam
-PKG_REV:=11211
-PKG_VERSION:=1.20-$(PKG_REV)
-PKG_RELEASE:=1
+PKG_NAME := oscam
+PKG_REV := 11398
+PKG_VERSION := 1.20-$(PKG_REV)
+PKG_RELEASE := 1
 
-PKG_SOURCE_PROTO:=svn
-PKG_SOURCE_VERSION:=$(PKG_REV)
-PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
-PKG_SOURCE_URL:=http://www.streamboard.tv/svn/oscam/trunk
-PKG_SOURCE:=$(PKG_SOURCE_SUBDIR).tar.bz2
-PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
+PKG_SOURCE_PROTO := svn
+PKG_SOURCE_VERSION := $(PKG_REV)
+PKG_SOURCE_URL := http://www.streamboard.tv/svn/oscam/trunk
+#PKG_SOURCE_URL := http://www.oscam.cc/svn/oscam-mirror/trunk
 
-PKG_LICENSE:=GPLv3
-PKG_LICENSE_FILES:=COPYING
-PKG_MAINTAINER:=tmn505
+PKG_LICENSE := GPL-3.0
+PKG_LICENSE_FILE := COPYING
 
-PKG_CONFIG_DEPENDS := \
-	OSCAM_USE_LIBCRYPTO \
-	OSCAM_USE_LIBUSB \
-	OSCAM_USE_PCSC \
-	OSCAM_WEBIF \
-	OSCAM_WEBIF_LIVELOG \
-	OSCAM_WEBIF_JQUERY \
-	OSCAM_TOUCH \
-	OSCAM_WITH_SSL \
-	OSCAM_HAVE_DVBAPI \
-	OSCAM_READ_SDT_CHARSETS \
-	OSCAM_IRDETO_GUESSING \
-	OSCAM_CS_ANTICASC \
-	OSCAM_WITH_DEBUG \
-	OSCAM_MODULE_MONITOR \
-	OSCAM_WITH_LB \
-	OSCAM_CS_CACHEEX \
-	OSCAM_CW_CYCLE_CHECK \
-	OSCAM_LCDSUPPORT \
-	OSCAM_LEDSUPPORT \
-	OSCAM_CLOCKFIX \
-	OSCAM_IPV6SUPPORT \
-	OSCAM_MODULE_CAMD33 \
-	OSCAM_MODULE_CAMD35 \
-	OSCAM_MODULE_CAMD35_TCP \
-	OSCAM_MODULE_NEWCAMD \
-	OSCAM_MODULE_CCCAM \
-	OSCAM_MODULE_CCCSHARE \
-	OSCAM_MODULE_GBOX \
-	OSCAM_MODULE_RADEGAST \
-	OSCAM_MODULE_SCAM \
-	OSCAM_MODULE_SERIAL \
-	OSCAM_MODULE_CONSTCW \
-	OSCAM_MODULE_PANDORA \
-	OSCAM_MODULE_GHTTP \
-	OSCAM_READER_NAGRA \
-	OSCAM_READER_IRDETO \
-	OSCAM_READER_CONAX \
-	OSCAM_READER_CRYPTOWORKS \
-	OSCAM_READER_SECA \
-	OSCAM_READER_VIACCESS \
-	OSCAM_READER_VIDEOGUARD \
-	OSCAM_READER_DRE \
-	OSCAM_READER_TONGFANG \
-	OSCAM_READER_BULCRYPT \
-	OSCAM_READER_GRIFFIN \
-	OSCAM_READER_DGCRYPT \
-	OSCAM_CARDREADER_PHOENIX \
-	OSCAM_CARDREADER_SC8IN1 \
-	OSCAM_CARDREADER_MP35 \
-	OSCAM_CARDREADER_SMARGO \
-	OSCAM_CARDREADER_STINGER
+PKG_MAINTAINER := Tomasz Maciej Nowak <tomek_n@o2.pl>
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -83,24 +27,20 @@ define Package/oscam/config
 	source "$(SOURCE)/Config.in"
 endef
 
-config_files=oscam.ac oscam.cacheex oscam.cert oscam.conf oscam.dvbapi oscam.guess oscam.ird oscam.provid oscam.server oscam.services oscam.srvid oscam.tiers oscam.user oscam.whitelist
-
-define Package/oscam/conffiles
-/etc/oscam/
-endef
-
 define Package/oscam
-	SECTION:=net
-	CATEGORY:=Network
-	TITLE:=Open Source Conditional Access Modul
-	URL:=http://www.streamboard.tv/oscam
-	DEPENDS:=+OSCAM_USE_LIBCRYPTO:libopenssl +OSCAM_USE_LIBUSB:libusb-1.0 +OSCAM_USE_PCSC:pcscd
+  SECTION := net
+  CATEGORY := Network
+  TITLE := Open Source Conditional Access Modul
+  URL := http://www.streamboard.tv/oscam
+  DEPENDS := +OSCAM_USE_LIBCRYPTO:libopenssl +OSCAM_USE_LIBUSB:libusb-1.0 +OSCAM_USE_PCSC:pcscd
 endef
 
 define Package/list-smargo
-	$(call Package/oscam)
-	TITLE:=List smargo readers
-	DEPENDS:=oscam
+  SECTION := net
+  CATEGORY := Network
+  TITLE := List Smargo readers
+  URL := http://www.streamboard.tv/oscam
+  DEPENDS := oscam @OSCAM_CARDREADER_SMARGO
 endef
 
 CONFIGURE_CMD = ./config.sh
@@ -154,6 +94,7 @@ CONFIGURE_ARGS = \
 	$(if $(CONFIG_OSCAM_CARDREADER_MP35),--enable,--disable) CARDREADER_MP35 \
 	$(if $(CONFIG_OSCAM_CARDREADER_SMARGO),--enable,--disable) CARDREADER_SMARGO \
 	$(if $(CONFIG_OSCAM_CARDREADER_STINGER),--enable,--disable) CARDREADER_STINGER \
+	$(if $(CONFIG_OSCAM_CARDREADER_DRECAS),--enable,--disable) CARDREADER_DRECAS \
 	--disable CARDREADER_INTERNAL_AZBOX \
 	--disable CARDREADER_INTERNAL_COOLAPI \
 	--disable CARDREADER_INTERNAL_COOLAPI2 \
@@ -161,8 +102,6 @@ CONFIGURE_ARGS = \
 	--disable CARDREADER_DB2COM \
 	--disable CARDREADER_STAPI \
 	--disable CARDREADER_STAPI5
-
-MAKE_FLAGS +=
 
 ifeq ($(CONFIG_OSCAM_USE_LIBUSB),y)
 	MAKE_FLAGS += USE_LIBUSB=1
@@ -180,18 +119,27 @@ ifeq ($(CONFIG_OSCAM_WITH_SSL),y)
 	MAKE_FLAGS += USE_SSL=1
 endif
 
-MAKE_FLAGS += CONF_DIR=/etc/oscam
-MAKE_FLAGS += OSCAM_BIN=Distribution/oscam
-MAKE_FLAGS += LIST_SMARGO_BIN=Distribution/list-smargo
+MAKE_FLAGS += \
+	CONF_DIR=/etc/oscam \
+	OSCAM_BIN=Distribution/oscam \
+	LIST_SMARGO_BIN=Distribution/list-smargo
 
+define Package/oscam/conffiles
+/etc/oscam/
+endef
 
 define Package/oscam/install
 	$(INSTALL_DIR) $(1)/usr/sbin
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/Distribution/oscam $(1)/usr/sbin/oscam
+
 	$(INSTALL_DIR) $(1)/etc/oscam
-	$(INSTALL_DATA) $(addprefix $(PKG_BUILD_DIR)/Distribution/doc/example/,$(config_files)) $(1)/etc/oscam/
+	$(CP) $(PKG_BUILD_DIR)/Distribution/doc/example/* $(1)/etc/oscam/
+
 	$(INSTALL_DIR) $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/oscam.init $(1)/etc/init.d/oscam
+
+	$(INSTALL_DIR) $(1)/etc/config
+	$(INSTALL_CONF) ./files/oscam.conf $(1)/etc/config/oscam
 endef
 
 define Package/list-smargo/install
