--- a/dvb-firmware/Makefile
+++ b/dvb-firmware/Makefile
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2017 Tomasz Maciej Nowak <tomek_n@o2.pl>
+# Copyright (C) 2017-2018 Tomasz Maciej Nowak <tomek_n@o2.pl>
 #
 # This is free software, licensed under the GNU General Public License v2.
 # See /LICENSE for more information.
@@ -9,10 +9,10 @@ include $(TOPDIR)/rules.mk
 PKG_NAME := dvb-firmware
 PKG_RELEASE := 1
 
-PKG_SOURCE_DATE := 2017-01-23
+PKG_SOURCE_DATE := 2017-10-10
 PKG_SOURCE_PROTO := git
 PKG_SOURCE_URL := https://github.com/LibreELEC/dvb-firmware.git
-PKG_SOURCE_VERSION := c91bab0210ef74af0090e7bda121dd628f32511a
+PKG_SOURCE_VERSION := ac20a365c6df3af1a7c92a0195d443b8cf19cb9f
 
 PKG_MAINTAINER := Tomasz Maciej Nowak <tomek_n@o2.pl>
 
