v4l-dvb: let the user choose the media tree supplier
Currently there are minimum two media tree repositories worth to mention:
one by linuxtv.org and another one by TBS GmbH. They are not superior to
another, so let the user decide which one to use.

--- a/v4l-dvb/Makefile
+++ b/v4l-dvb/Makefile
@@ -8,18 +8,9 @@
 include $(TOPDIR)/rules.mk
 include $(INCLUDE_DIR)/kernel.mk
 
-PKG_NAME := v4l-dvb
+include ./origin/selected.mk
+
 PKG_RELEASE := 1
-
-PKG_SOURCE_PROTO := git
-PKG_SOURCE_URL := https://github.com/tbsdtv/media_build.git
-PKG_SOURCE_VERSION := 4735369fca22122cbc4dffd16c36026747563b0b
-
-V4L_SOURCE_URL := https://github.com/tbsdtv/linux_media.git
-V4L_SOURCE_VERSION := 23087976705d594febef88e9160c3eb76abb2d48
-V4L_REPO_NAME := $(shell printf $(V4L_SOURCE_URL) | awk -F'/' '{sub(/\.git/, "", $$NF); printf $$NF}')
-PKG_SOURCE_DATE := 2018-10-16
-V4L_SOURCE_FILE := $(V4L_REPO_NAME)-$(PKG_SOURCE_DATE)-$(shell printf '%.8s' $(V4L_SOURCE_VERSION)).tar.bz2
 
 PKG_LICENSE := GPL-2.0
 PKG_MAINTAINER := Tomasz Maciej Nowak <tomek_n@o2.pl>
@@ -41,14 +32,14 @@ define Build/Prepare
 	$(call Build/Prepare/Default)
 
 	(if [ -s $(DL_DIR)/$(V4L_SOURCE_FILE) ]; \
-		then $(CP) $(DL_DIR)/$(V4L_SOURCE_FILE) $(PKG_BUILD_DIR)/linux/$(subst _,-,$(V4L_REPO_NAME)).tar.bz2; \
+		then $(CP) $(DL_DIR)/$(V4L_SOURCE_FILE) $(PKG_BUILD_DIR)/linux/linux-media.tar.bz2; \
 	else if [ -d $(DL_DIR)/$(V4L_REPO_NAME) ]; \
 			then (cd $(DL_DIR)/$(V4L_REPO_NAME); git checkout HEAD; git pull); \
 		else git clone --single-branch $(V4L_SOURCE_URL) $(DL_DIR)/$(V4L_REPO_NAME); \
 		fi; \
 		cd $(DL_DIR)/$(V4L_REPO_NAME); git checkout $(V4L_SOURCE_VERSION); \
 		cd $(PKG_BUILD_DIR)/linux; make tar DIR=$(DL_DIR)/$(V4L_REPO_NAME); \
-		$(CP) $(subst _,-,$(V4L_REPO_NAME)).tar.bz2 $(DL_DIR)/$(V4L_SOURCE_FILE); \
+		$(CP) linux-media.tar.bz2 $(DL_DIR)/$(V4L_SOURCE_FILE); \
 	fi;)
 
 	$(MAKE) -C $(PKG_BUILD_DIR) untar
@@ -71,8 +62,7 @@ endef
 DVB_MENU := DVB Drivers
 
 define KernelPackage/media
-  SUBMENU := $(DVB_MENU)
-  TITLE := V4L/DVB Drivers from TBS
+  TITLE := V4L/DVB Drivers
   URL := http://www.linuxtv.org
   HIDDEN := y
   V4L_KCONFIG := \
@@ -81,6 +71,9 @@ define KernelPackage/media
   FILES := $(PKG_BUILD_DIR)/v4l/media.ko
   AUTOLOAD := $(call AutoProbe,media)
   DEPENDS := @PCI_SUPPORT||USB_SUPPORT
+endef
+define KernelPackage/media/config
+	source "$(SOURCE)/origin/Config.in"
 endef
 
 define KernelPackage/media/description
