--- a/oscam/files/oscam.conf
+++ b/oscam/files/oscam.conf
@@ -1,13 +1,8 @@
-config oscam
-	option disabled '1'
-	option respawn '1'
-	option config_dir '/etc/oscam'
-	option temp_dir '/tmp/.oscam'
-	option pidfile '/var/run/oscam.pid'
-	option restart_level '1'
-	option wait_on_startup '0'
-	option syslog_ident 'oscam'
-	option show_sensitive '0'
-	option debug_level '0'
-	option pending_ecm '32'
-	option webif_utf8 '1'
+[global]
+logfile=syslog
+
+[webif]
+httpport=8888
+httpuser=
+httppwd=
+httpallowed=127.0.0.1,10.0.0.0-10.255.255.255,172.16.0.0-172.31.255.255,192.168.0.0-192.168.255.255,::1
