oscam: bump revision to 11532
Aditionally fix small typo.

Signed-off-by: Tomasz Maciej Nowak <tmn505@gmail.com>

--- a/oscam/Config.in
+++ b/oscam/Config.in
@@ -194,7 +194,7 @@ config OSCAM_WITH_LB
 	bool "Loadbalancing"
 	default y
 
-config OSCAM_S_CACHEEX
+config OSCAM_CS_CACHEEX
 	bool "Cache exchange"
 	default y
 
