WIP: fix vdr-satip
Signed-off-by: Dirk Neukirchen <gh2020@plntyk.name>

--- a/vdr-satip/Makefile
+++ b/vdr-satip/Makefile
@@ -7,12 +7,13 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME := vdr-satip
-PKG_RELEASE := 2
+PKG_RELEASE := 1
 
 PKG_SOURCE_PROTO := git
 PKG_SOURCE_URL := https://github.com/rofafor/vdr-plugin-satip.git
-PKG_SOURCE_VERSION := 28cc3cae63b48810350c98b4e3c0b580b6a153f3
-PKG_VERSION := 2.2.5-$(shell printf '%.8s' $(PKG_SOURCE_VERSION))
+PKG_MIRROR_HASH := a076c0d26a42cdd19666168f945d4fac477051cbe6dc0a1383eb2f76dd6de6f5
+PKG_SOURCE_VERSION := 299296bbb1a7274e7c67abee64a6edc24bf965bc
+PKG_VERSION := 2.4.0
 
 PKG_LICENSE := GPL-2.0
 PKG_LICENSE_FILE := COPYING
@@ -20,6 +21,7 @@ PKG_LICENSE_FILE := COPYING
 PKG_MAINTAINER := Tomasz Maciej Nowak <tomek_n@o2.pl>
 
 include $(INCLUDE_DIR)/package.mk
+include $(INCLUDE_DIR)/nls.mk
 
 define Package/vdr-satip
   SECTION := multimedia
@@ -32,6 +34,14 @@ endef
 define Package/vdr-satip/description
  VDR satip frontend device plugin.
 endef
+
+TARGET_CXXFLAGS+= -std=gnu++98
+
+# rework because dep of w-scan-cpp
+#define Build/InstallDev
+#	$(INSTALL_DIR) $(1)/usr/include/vdr/PLUGIN/satip
+#	$(CP) $(PKG_BUILD_DIR)/satip.h $(1)/usr/include/vdr/PLUGIN/satip/
+#endef
 
 define Package/vdr-satip/install
 	$(MAKE) -C $(PKG_BUILD_DIR) DESTDIR=$(1) install-lib install-conf
